feat: refresh jwt token
